welcome.lessons.welcome.bat.bool1.In3050.scala.error
in3050:2: error: not found: value ||
  if (40<=a&&a<=50)||()(30<=a&&a<=40){
                   ^in3050:5: error: not found: value ||
  if (40<=b&&b<=50)||()(30<=b&&b<=40){
                   ^