welcome.lessons.welcome.bat.bool1.In3050.scala.code
def in3050(a:Int, b:Int):Boolean = {
  if (40<=a&&a<=50)||()(30<=a&&a<=40){
    return true
  }
  if (40<=b&&b<=50)||()(30<=b&&b<=40){
    return true
  }else{return false}
}